[FIX] Horizontal Scrollbar Deleted

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -163,11 +163,6 @@ aside {
     border-top: 1px dashed #57648C;
 }
 
-.footer {
-    text-align: center;
-    color: #E0E7E9;
-}
-
 /* REMOVE BG ON BOOTSTRAP CARD HEADER */
 .card-header {
     background-color: transparent;
